--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.10.1",
+    "axios": "^1.8.4",
+    "express": "^5.1.0",
+    "node-fetch": "^2.7.0",
     "puppeteer": "^24.6.1",
-    "puppeteer-core": "^24.6.1"
+    "puppeteer-core": "^24.6.1",
+    "zod": "^3.24.3"
   },
   "name": "cuentica",
   "version": "1.0.0",
